test/e2e/functional/alb-canary-rollout.yaml
apiVersion: v1
kind: Service
metadata:
  name: alb-canary-root
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: alb-canary
---
apiVersion: v1
kind: Service
metadata:
  name: alb-canary-desired
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: alb-canary
---
apiVersion: v1
kind: Service
metadata:
  name: alb-canary-stable
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: alb-canary
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: alb-canary-ingress
  annotations:
    kubernetes.io/ingress.class: alb
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: alb-canary-root
          servicePort: use-annotation
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: alb-canary
spec:
  selector:
    matchLabels:
      app: alb-canary
  template:
    metadata:
      labels:
        app: alb-canary
    spec:
      containers:
      - name: alb-canary
        image: nginx:1.19-alpine
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            memory: 16Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: alb-canary-desired
      stableService: alb-canary-stable
      trafficRouting:
        alb:
          ingress: alb-canary-ingress
          rootService: alb-canary-root
          servicePort: 80
      steps:
      - setWeight: 10
      - pause: {duration: 5s}
      - setWeight: 20
      - pause: {duration: 5s}
